--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@firebase/app-types": "^0.7.0",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.2",
     "@reduxjs/toolkit": "^1.8.2",
@@ -18,16 +19,17 @@
     "@types/react-redux": "^7.1.18",
     "@types/webpack-env": "^1.17.0",
     "axios": "^0.22.0",
+    "firebase": "^9.9.4",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
-    "sass": "^1.52.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.52.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
