--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.18",
+    "@types/swiper": "^6.0.0",
     "@types/webpack-env": "^1.17.0",
     "axios": "^0.22.0",
     "firebase": "^9.9.4",
@@ -32,6 +33,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "sass": "^1.52.3",
+    "swiper": "^8.4.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
