--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@firebase/app-types": "^0.7.0",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.2",
+    "@react-google-maps/api": "^2.13.1",
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -23,8 +24,10 @@
     "firebase": "^9.9.4",
     "formik": "^2.2.9",
     "react": "^17.0.2",
+    "react-click-outside": "^3.0.1",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.3",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^7.2.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
@@ -35,6 +38,7 @@
     "sass": "^1.52.3",
     "swiper": "^8.4.2",
     "typescript": "^4.1.2",
+    "use-places-autocomplete": "^4.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
