--- a/package.json
+++ b/package.json
@@ -24,10 +24,9 @@
     "firebase": "^9.9.4",
     "formik": "^2.2.9",
     "react": "^17.0.2",
-    "react-click-outside": "^3.0.1",
+    "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.3",
-    "react-google-maps": "^9.4.5",
     "react-redux": "^7.2.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
