--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "online-store",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://maxmajorov.github.io/online-store-firebase/",
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
@@ -23,6 +24,7 @@
     "axios": "^0.22.0",
     "firebase": "^9.9.4",
     "formik": "^2.2.9",
+    "gh-pages": "^4.0.0",
     "react": "^17.0.2",
     "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "^17.0.2",
@@ -44,7 +46,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
